Fix black body background showing through on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -26,8 +26,8 @@ html {
 body {
   margin: 0;
   padding: 0;
-  background-color: #000;
-  color: #fff;
+  background-color: #f3eee3;
+  color: #1d130c;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
